# agent-grid

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.worker  README.md  SPEC.md  alembic.ini  digger.yml  docker-compose.yml  fly.toml  pyproject.toml  run-worker.sh  schema.sql
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml  infra.yml
.spacelift/: config.yml
docs/plans/: 2026-02-08-tech-lead-agent.md  2026-02-14-fix-three-major-problems.md  2026-03-07-github-app-auth.md  2026-03-14-scout-pipeline-sequential-execution.md  2026-03-21-migrate-oz-to-claude-code-cli.md
scripts/: cleanup_stuck_issues.py  refresh-claude-credentials.sh  run-scheduled.sh  run-worker.sh  setup-local-worker.sh  start.sh  stream-to-coordinator.py  test_oz_run.py  worker-entrypoint-v2.sh  worker-entrypoint.sh
src/agent_grid/: __init__.py  config.py  dry_run.py  e2e_complex_test.py  e2e_test.py  github_app.py  main.py  scheduled_task.py  worker.py
src/agent_grid/common/: __init__.py  event_bus.py  models.py
src/agent_grid/coordinator/: __init__.py  agent_event_persister.py  agent_launcher.py  blocker_resolver.py  budget_manager.py  chat_logger.py  ci_monitor.py  classifier.py  claude_code_callbacks.py  dashboard_api.py  database.py  dependency_resolver.py  management_loop.py  models.py  nudge_handler.py  oz_callbacks.py  planner.py  pr_monitor.py  proactive_scanner.py  prompt_builder.py  (+6 more)
tests/: __init__.py  test_ci_monitor.py  test_claude_code_grid.py  test_comment_updates_e2e.py  test_coordinator.py  test_dashboard.py  test_e2e.py  test_execution_grid.py  test_github_app.py  test_github_client.py  test_issue_tracker.py  test_proactive_scanner.py  test_project_manager.py  test_quality_gate.py  test_real_e2e.py  test_scout.py  test_status_comment.py  test_webhook_processor.py
(+54 files in other folders)
