[tool.poetry]
name = "agent-grid"
version = "0.1.0"
description = "Agent orchestration system for coding agents"
authors = ["Agent Grid Team"]
readme = "README.md"
packages = [{include = "agent_grid", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.34"
httpx = "^0.28"
pydantic = "^2.10"
pydantic-settings = "^2.7"
claude-code-sdk = "^0.0.25"
asyncpg = "^0.30"
pyyaml = "^6.0"
anthropic = "^0.52"
oz-agent-sdk = "^0.6"
alembic = "^1.14"
sqlalchemy = "^2.0"  # Required by alembic for migrations
psycopg2-binary = "^2.9"  # Sync driver for alembic migrations

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-timeout = "^2.3"
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.poetry.scripts]
agent-grid = "agent_grid.main:run"
agent-grid-worker = "agent_grid.worker:main"
